<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_setting"
            android:title="@string/caidat"
            android:icon="@drawable/ic_setting"/>
        <item android:id="@+id/nav_moreapp"
            android:title="@string/udkhac"
            android:icon="@drawable/ic_more_app"/>
        <item android:id="@+id/nav_share"
            android:title="@string/chia_se"
            android:icon="@drawable/ic_share"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Khác">
            <menu>
                <item android:id="@+id/nav_donate"
                    android:title="Donate"
                    android:icon="@drawable/ic_price"/>
                <item android:id="@+id/nav_like"
                    android:title="Đánh giá ứng dụng"
                    android:icon="@drawable/ic_like"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
        <item android:title=""></item>
    </group>
</menu>